k8s/microservices-with-otel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: willbrid
  name: zerofiltre-blog-frontend-willbrid
spec:
  minReadySeconds: 30
  progressDeadlineSeconds: 120
  replicas: 1
  selector:
    matchLabels:
      app: zerofiltre-blog-frontend-willbrid
  template:
    metadata:
      labels:
        app: zerofiltre-blog-frontend-willbrid
    spec:
      containers:
      - name: zerofiltre-blog-frontend-willbrid
        image: imzerofiltre/zerofiltretech-blog-front:7_willbrid
        imagePullPolicy: IfNotPresent
        ports:
        - name: http-port
          containerPort: 4000
          protocol: TCP
        resources:
          requests:
            cpu: '0.01'
            memory: '50Mi'
          limits:
            cpu: '0.5'
            memory: 512Mi
        livenessProbe:
          tcpSocket:
            port: 4000
          initialDelaySeconds: 20
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  namespace: willbrid
  name: zerofiltre-blog-frontend-willbrid
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-port
  selector:
    app: zerofiltre-blog-frontend-willbrid
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: willbrid
  name: zerofiltre-blog-frontend-willbrid
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: willbrid-blog.zerofiltre.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zerofiltre-blog-frontend-willbrid
                port:
                  number: 80
  tls:
  - hosts:
    - willbrid-blog.zerofiltre.tech
    secretName: zerofiltre-blog-frontend-willbrid-cert
